--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@
 
 language: objective-c
 # cache: cocoapods
-# podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
+podfile: Example/Podfile
+before_install:
+- gem install cocoapods --no-rdoc --no-ri --no-document  # Since Travis is not always on latest version
+- pod install --project-directory=Example
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Example/Lock-GooglePlus.xcworkspace -scheme Lock-GooglePlus-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
+- set -o pipefail && xcodebuild test -workspace Example/Lock-GooglePlus.xcworkspace -scheme Lock-GooglePlus -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
 - pod lib lint --quick
