Updated dependencies Removed retired Google SignIn code Updated tests Cleaned up podfile

--- a/LockGoogleApp/GoogleService-Info.plist
+++ b/LockGoogleApp/GoogleService-Info.plist
@@ -3,13 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>856630117504-qmpg3s5fto99l8splr3u1npcb1rd2bnk.apps.googleusercontent.com</string>
+	<string>691382151861-53db636ssoktkj9cg91c53s5eer0gbke.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.856630117504-qmpg3s5fto99l8splr3u1npcb1rd2bnk</string>
+	<string>com.googleusercontent.apps.691382151861-53db636ssoktkj9cg91c53s5eer0gbke</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.auth0.LockGoogleApp</string>
+	<key>PROJECT_ID</key>
+	<string>default-demo-app-a7d7c</string>
 	<key>IS_ADS_ENABLED</key>
 	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -20,5 +22,7 @@
 	<false/>
 	<key>IS_SIGNIN_ENABLED</key>
 	<true/>
+	<key>GOOGLE_APP_ID</key>
+	<string>1:691382151861:ios:e5a7431626f546a8</string>
 </dict>
 </plist>
