--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: objective-c
 osx_image: xcode8.2
 before_install:
 - gem install cocoapods xcpretty --no-rdoc --no-ri --no-document
-- pod repo update
+- pod repo update --silent
 script:
 - set -o pipefail && xcodebuild test -workspace LockGoogle.xcworkspace -scheme LockGoogle -destination 'id=AD8E8C76-910E-437D-88C2-4D6F6EBE3355' | xcpretty -c
 - pod lib lint --quick
